# politech

./: .dockerignore  .env.dokploy  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  docker-entrypoint.sh  dokploy-compose.yaml  index.html  md.php  package.json  pnpm-lock.yaml  prd.md  prompt.md  todo.md
.cursor/: Dockerfile  environment.json  install.sh
deploy/: politech.service
design-docs/: codebase.md
design-docs/modules/: abuse-detection-risk.md  admin-moderation.md  api-sdk-boundary.md  auth.md  chat-messages.md  chats.md  credentials.md  dashboard.md  entity-resolution.md  feature-flags-experiments.md  ingestion-enrichment.md  jobs-orchestration.md  locality-traits-extrapolation.md  locality.md  map-data.md  notification.md  observability-audit.md  orchestrator.md  population-groups.md  population-traits.md  profile.md  provider-adapter.md  public-pages.md  recommendation-engine.md  search-discovery.md  settings.md  simulation-results.md  simulations.md  sources.md  topic-analytics.md  topics.md  users-sessions.md
migrations/: 202602250001_phase1_foundation.sql  202602250002_locality_seed.sql  202602250003_phase1_credentials_orchestrator_ingestion.sql  202602250005_locations.sql  202602251000_location_hexaco_traits.sql  202602251001_location_hexaco_varied.sql
migrations/modules/: locations.sql  topics.sql
public/: app.css  charts.js  map.js  styles.css
src/: config.rs  crypto.rs  lib.rs  main.rs  middleware.rs  models.rs  state.rs
src/modules/: mod.rs
src/modules/auth/: dal.rs  handler.rs  mod.rs  models.rs  service.rs
src/modules/credentials/: dal.rs  handler.rs  mod.rs  models.rs  service.rs
src/modules/ingestion/: dal.rs  handler.rs  mod.rs  models.rs  service.rs
src/modules/locality/: dal.rs  handler.rs  mod.rs  models.rs  service.rs
src/modules/locations/: dal.rs  handler.rs  mod.rs  models.rs  service.rs
src/modules/maps/: handler.rs  mod.rs  models.rs  service.rs
src/modules/orchestrator/: dal.rs  handler.rs  mod.rs  models.rs  service.rs
src/modules/topics/: dal.rs  handler.rs  mod.rs  models.rs  service.rs
src/modules/users/: dal.rs  handler.rs  mod.rs  models.rs  service.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/ui/layout/: app_shell.rs  mod.rs
src/ui/pages/: dashboard.rs  home.rs  mod.rs
web/styles/: input.css
(+8 files in other folders)
